# traffic_simulation

./: CMakeLists.txt  alternative_lane.cpp  cars  city.json  evil_code.cpp  log  markdown_to_html.sh  readme.html  readme.md  single_road.json  sorting_test  sorting_test.cpp  temp.c
animate_data/: animate_data.pde  keyframes.json  node.pde  road.pde  vehicle.pde
design_documents/: Lane.md  LaneContainer.html  LaneContainer.md  city_data.json.html  city_data.json.md  keyframes.json.html  keyframes.json.md  pre_design_document.html  pre_design_document.md
design_documents/animate_data/: overview.html  overview.md
design_documents/branches_and_versions/: basicStructure.html  basicStructure.md  drive-a-single-vehicles.md  drive_a_single_vehicle.md  drive_vehicle.html  drive_vehicle.md
include/: Car.hpp  CityNetwork.hpp  Hellhole.hpp  ICityNetwork.hpp  Lane.hpp  Node.hpp  Road.hpp  RoadVehicle.hpp  TrafficExceptions.hpp  road.hpp  vehicle.hpp
licenses/: libjsoncpp_license.html  libjsoncpp_license.md  license.html  license.md
src/: CMakeLists.txt  Car.cpp  CityNetwork.cpp  Hellhole.cpp  Lane.cpp  Node.cpp  Road.cpp  RoadVehicle.cpp  main.cpp  main_test_Lane.cpp
tests/: CMakeLists.txt  Test_Lane.cpp  Test_Lane_memory.cpp  Test_Loading.cpp  Test_Vehicle.cpp  test.cpp
